homeassistant/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  selector:
    matchLabels:
      app: db
  replicas: 1
  minReadySeconds: 10
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - image: postgres:17.2-alpine
          name: db
          volumeMounts:
            - name: db-volume
              mountPath: /var/lib/postgresql/data
          resources:
            limits:
              memory: 396Mi
              cpu: 1
            requests:
              memory: 32Mi
              cpu: 1m
      volumes:
        - name: db-volume
          hostPath:
            path: /var/data/homeassistant/postgres
            type: Directory
