homeassistant/ha.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
spec:
  selector:
    matchLabels:
      app: homeassistant
  replicas: 1
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      hostNetwork: true
      containers:
        - image: ghcr.io/home-assistant/home-assistant:2025.5.2
          name: homeassistant
          volumeMounts:
            - name: homeassistant-volume
              mountPath: /config
            - name: dummy-volume
              mountPath: /.dockerenv
              subPath: .dockerenv
          resources:
            limits:
              memory: 1.5Gi
              cpu: 2
      volumes:
        - name: homeassistant-volume
          hostPath:
            path: /var/data/homeassistant
            type: Directory
        - name: dummy-volume
          configMap:
            name: dummy-configmap
