homeassistant/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: db
spec:
  ports:
    - port: 5432
      name: psql
  clusterIP: 10.152.183.254
  selector:
    app: db
