homeassistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  labels:
    app: homeassistant
spec:
  ports:
    - port: 8123
      name: http
  selector:
    app: homeassistant
